corrected break in nav bar around 900 px, added features html

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,11 +15,11 @@ h1,
 h2,
 h3 {
   margin: 0;
-  padding: 0.5em 0;
+  padding: 0 0;
 }
 p {
   margin: 0;
-  padding: 0.5em 0;
+  padding: 0 0;
   font-size: 0.9em;
 }
 #section-centerTop {
@@ -77,7 +77,7 @@ p {
     padding: 0;
   }
 }
-@media (min-width: 592px) and (max-width: 809px) {
+@media (min-width: 592px) and (max-width: 920px) {
   #section-features-all ul {
     display: flex;
     flex-wrap: wrap;
@@ -104,7 +104,7 @@ p {
     padding: 0;
   }
 }
-@media (min-width: 810px) and (max-width: 2000px) {
+@media (min-width: 921px) and (max-width: 2000px) {
   #section-features-all ul {
     display: flex;
     flex-wrap: wrap;
@@ -127,9 +127,12 @@ p {
     padding: 0;
   }
   #section-features-all ul li p {
-    margin: 1em;
+    margin: 3em 1em;
     padding: 0;
   }
+}
+strong {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 @media (min-width: 0px) and (max-width: 591px) {
   nav {
@@ -155,14 +158,14 @@ p {
     margin-bottom: 20px;
   }
 }
-@media (min-width: 592px) and (max-width: 809px) {
+@media (min-width: 592px) and (max-width: 920px) {
   nav {
     display: flex;
     justify-content: center;
     flex-direction: column;
   }
 }
-@media (min-width: 592px) and (max-width: 809px) {
+@media (min-width: 592px) and (max-width: 920px) {
   nav a {
     display: inline;
     justify-content: center;
@@ -174,7 +177,7 @@ p {
     padding: 0 1em;
   }
 }
-@media (min-width: 592px) and (max-width: 809px) {
+@media (min-width: 592px) and (max-width: 920px) {
   nav.logo {
     display: inline-block;
     width: 50%;
@@ -182,7 +185,7 @@ p {
     margin: 1em 0%;
   }
 }
-@media (min-width: 810px) and (max-width: 2000px) {
+@media (min-width: 921px) and (max-width: 2000px) {
   nav {
     display: flex;
     align-items: center;
@@ -190,7 +193,7 @@ p {
     width: 100%;
   }
 }
-@media (min-width: 810px) and (max-width: 2000px) {
+@media (min-width: 921px) and (max-width: 2000px) {
   nav a {
     display: inline;
     justify-content: center;
@@ -202,7 +205,7 @@ p {
     padding: 0 1em;
   }
 }
-@media (min-width: 810px) and (max-width: 2000px) {
+@media (min-width: 921px) and (max-width: 2000px) {
   .logo {
     display: flex;
     flex-wrap: nowrap;
@@ -294,7 +297,7 @@ p {
     padding: 0.5em 1.5em;
   }
 }
-@media (min-width: 592px) and (max-width: 809px) {
+@media (min-width: 592px) and (max-width: 920px) {
   #headerBtn {
     display: inline-block;
     margin: 13em 0 0 0;
@@ -310,19 +313,19 @@ p {
     color: white;
   }
 }
-@media (min-width: 592px) and (max-width: 809px) {
+@media (min-width: 592px) and (max-width: 920px) {
   #showcase {
     min-height: 450px;
     color: #484A51;
     text-align: center;
   }
 }
-@media (min-width: 592px) and (max-width: 809px) {
+@media (min-width: 592px) and (max-width: 920px) {
   #showcase p {
     color: #484A51;
   }
 }
-@media (min-width: 592px) and (max-width: 809px) {
+@media (min-width: 592px) and (max-width: 920px) {
   #showcase .bg-image {
     position: absolute;
     background: white url(/img/background-calm-clouds-747964.jpg);
@@ -335,26 +338,26 @@ p {
     opacity: 0.6;
   }
 }
-@media (min-width: 592px) and (max-width: 809px) {
+@media (min-width: 592px) and (max-width: 920px) {
   #showcase h1 {
     padding-top: 0;
     padding-bottom: 0;
   }
 }
-@media (min-width: 592px) and (max-width: 809px) {
+@media (min-width: 592px) and (max-width: 920px) {
   #showcase p {
     padding-top: 0;
     padding-bottom: 0;
     font-size: 0.9em;
   }
 }
-@media (min-width: 592px) and (max-width: 809px) {
+@media (min-width: 592px) and (max-width: 920px) {
   #showcase .content-wrap,
   #section-centerTop {
     padding: 0.5em 1.5em;
   }
 }
-@media (min-width: 810px) and (max-width: 2000px) {
+@media (min-width: 921px) and (max-width: 2000px) {
   #headerBtn {
     display: inline-block;
     margin: 5em 0 0 0;
@@ -370,19 +373,19 @@ p {
     color: white;
   }
 }
-@media (min-width: 810px) and (max-width: 2000px) {
+@media (min-width: 921px) and (max-width: 2000px) {
   #showcase {
     min-height: 450px;
     color: #484A51;
     text-align: center;
   }
 }
-@media (min-width: 810px) and (max-width: 2000px) {
+@media (min-width: 921px) and (max-width: 2000px) {
   #showcase p {
     color: #484A51;
   }
 }
-@media (min-width: 810px) and (max-width: 2000px) {
+@media (min-width: 921px) and (max-width: 2000px) {
   #showcase .bg-image {
     position: absolute;
     background: white url(/img/background-calm-clouds-747964.jpg);
@@ -395,20 +398,20 @@ p {
     opacity: 0.6;
   }
 }
-@media (min-width: 810px) and (max-width: 2000px) {
+@media (min-width: 921px) and (max-width: 2000px) {
   #showcase h1 {
     padding-top: 0;
     padding-bottom: 0;
   }
 }
-@media (min-width: 810px) and (max-width: 2000px) {
+@media (min-width: 921px) and (max-width: 2000px) {
   #showcase p {
     padding-top: 0;
     padding-bottom: 0;
     font-size: 0.9em;
   }
 }
-@media (min-width: 810px) and (max-width: 2000px) {
+@media (min-width: 921px) and (max-width: 2000px) {
   #showcase .content-wrap,
   #section-centerTop {
     padding: 0.5em 1.5em;
