--- a/LESS/global.less
+++ b/LESS/global.less
@@ -13,14 +13,14 @@ body {
 }
 h1, h2, h3 {
   margin:0;
-  padding: .5em 0;  
+  padding: 0 0;  
 }
 
 p{
   margin:0;
-  padding: .5em 0;
+  padding: 0 0;
   font-size: .9em;
 }
 @mobile: (min-width: 0px) and (max-width: 591px);
-@tablet: (min-width: 592px) and (max-width: 809px);
-@desktop: (min-width: 810px) and (max-width: 2000px);
+@tablet: (min-width: 592px) and (max-width: 920px);
+@desktop: (min-width: 921px) and (max-width: 2000px);
