--- a/LESS/main.less
+++ b/LESS/main.less
@@ -114,11 +114,14 @@ display: none;
           padding:0;
         }
         p{
-          margin:1em;
+          margin:3em 1em;
           padding:0;
         }
       }
     }
   }
+}
+strong{
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 
